[package]
name = "clia-ntex-cors-mod"
version = "0.2.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "A modification for ntex-cors, not require a `ORIGIN` header to produce CORS header."
readme = "README.md"
keywords = ["ntex", "web"]
homepage = "https://ntex.rs"
repository = "https://github.com/clia/ntex-cors-mod.git"
documentation = "https://docs.rs/clia-ntex-cors-mod/"
license = "MIT"
edition = "2018"

[lib]
name = "clia_ntex_cors_mod"
path = "src/lib.rs"

[dependencies]
ntex = "0.5.14"
derive_more = "0.99"
futures = "0.3"

[dev-dependencies]
ntex = { version = "0.5", features=["tokio"] }
